--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cloudinary-labs/cloudinary-laravel": "^3.0",
         "doctrine/dbal": "^4.3",
         "google/apiclient": "^2.18",
+        "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1"
